--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,36 @@
 body {
     background-color:lightgreen;
-    font-family: trebuchet MS;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align:center;
+    margin: 0px;
 }
 
+
+header {
+    background-color: rgb(255, 207, 117);
+    padding: 5px;
+    margin: 20px 70px 0px 70px;
+}
+
+main {
+    padding: 10px;
+    
+}
+
+
+footer{
+    background-color: rgb(255, 117, 117);
+    padding: 10px;
+}
+
+
+.text {
+    width: 40em;
+    padding: 10px;
+    border: 10px solid rgb(250, 250, 132);
+    background: rgb(255, 187, 160);
+    margin: auto;
+}
 
 h1 {
    color: darkcyan;
@@ -13,21 +41,28 @@ h1 {
 }
 
 
+li {
+    list-style-type: none;
+    display: inline;
+    margin-right: 30px;
+}
+
+
 a {
     color: darkorange;
 }
 
-#text {
+.text {
     color: darkolivegreen;
 }
 
 
 blockquote {
-    color: red;
+    color: rgb(248, 77, 77);
 }
 
 a#search {
-    color: darkgreen;
+    color: rgb(28, 116, 28);
 }
 
 a#search:hover {
@@ -45,5 +80,6 @@ a:hover {
 a:active {
     color: yellow;
 }
+
 
 /* suppilovahvero */
