--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,19 @@ body {
     margin: 0px;
 }
 
+* {
+    box-sizing: border-box
+}
 
 header {
     background-color: rgb(255, 207, 117);
     padding: 5px;
     margin: 20px 70px 0px 70px;
+    border-radius: 200px;
 }
 
 main {
     padding: 10px;
-    
 }
 
 
@@ -30,6 +33,7 @@ footer{
     border: 10px solid rgb(250, 250, 132);
     background: rgb(255, 187, 160);
     margin: auto;
+    border-radius: 30px;
 }
 
 h1 {
