--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ header {
     background-color: rgb(255, 207, 117);
     padding: 5px;
     margin: 20px 70px 0px 70px;
-    border-radius: 200px;
+    border-radius: 200%;
 }
 
 main {
