--- a/css/style2.css
+++ b/css/style2.css
@@ -9,34 +9,31 @@ body {
     box-sizing: border-box
 }
 
-header {
+.header {
     background-color: rgb(255, 207, 117);
     padding: 5px;
     margin: 40px 120px 10px 120px;
     border-radius: 200px;
 }
 
-main {
+.main {
     padding: 10px;
 }
 
 
-footer{
+.footer{
     background-color: rgb(255, 117, 117);
     padding: 10px;
 }
 
-
-.text {
+.main {
     width: 75%;
     padding: 10px;
-    border: 3px solid rgb(250, 250, 132);
-    background: rgb(255, 187, 160);
     margin: auto;
 }
 
 h1 {
-   color: darkcyan;
+   color: #47A83F;
    text-decoration: underline;
    letter-spacing: 2px;
    font-size: 40px;
@@ -56,7 +53,7 @@ a {
 }
 
 
-.text {
+.main {
     color: darkolivegreen;
 }
 
