--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,84 @@
-body {
+*{
+    box-sizing: border-box;
+}
+
+.header { grid-area: header; }
+.image { grid-area: image; }
+.nav {grid-area: nav; }
+.main { grid-area: main; }
+.empty { grid-area: empty; }
+.footer { grid-area: footer; }
+
+.grid-container {
+    display: grid;
+    grid-template-areas:
+    'header header'
+    'image image'
+    'nav nav'
+    'main main'
+    'empty empty'
+    'footer footer';
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
     background-color:lightgreen;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align:center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0px;
 }
 
-* {
-    box-sizing: border-box
+body{
+    background-color: lightgreen;
+    margin: 0px;
 }
 
-header {
-    background-color: rgb(255, 207, 117);
+.header {
+    background-color: #FCF8EA;
     padding: 5px;
     margin: 20px 70px 0px 70px;
-    border-radius: 200%;
+    border-radius: 400% 700%;
 }
 
-main {
-    padding: 10px;
+.image {
+    grid-row: 2 / 3;
+    margin-top: 10px;
+    padding: 0px;
 }
 
+.empty {
+    margin: 30px;
+    grid-row: 5 / 6;
+}
 
-footer{
+.footer{
     background-color: rgb(255, 117, 117);
     padding: 10px;
 }
 
-
-.text {
-    width: 40em;
+.main {
     padding: 10px;
     border: 10px solid rgb(250, 250, 132);
     background: rgb(255, 187, 160);
-    margin: auto;
+    margin: 10px;
+    margin-left: 50px;
+    margin-right: 50px;
     border-radius: 30px;
+    color: darkolivegreen;
 }
 
 h1 {
-   color: darkcyan;
+   color: #47A83F;
    text-decoration: underline;
    letter-spacing: 2px;
-   font-size: 60px;
+   font-size: 3.5vw;
    font-family: Georgia, 'Times New Roman', Times, serif
 }
 
+@media only screen and (max-width: 560px){
+    h1{
+    font-size: 25px;
+    }
+    
+}
 
 li {
     list-style-type: none;
@@ -51,22 +86,16 @@ li {
     margin-right: 30px;
 }
 
-
 a {
-    color: darkorange;
+    color: #FF7702;
 }
-
-.text {
-    color: darkolivegreen;
-}
-
 
 blockquote {
     color: rgb(248, 77, 77);
 }
 
 a#search {
-    color: rgb(28, 116, 28);
+    color: #F77B7B;
 }
 
 a#search:hover {
@@ -83,6 +112,43 @@ a:hover {
 
 a:active {
     color: yellow;
+}
+
+
+@media screen and (min-width: 736px){
+    .grid-container {
+    display: grid;
+    grid-template-areas:
+    'header header'
+    'image image'
+    'nav nav'
+    'main main'
+    'empty empty'
+    'footer footer';
+    background-color:lightgreen;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 0px;
+  }
+  .header{
+    border-radius: 60% 90%;
+
+  }
+  .main {
+    margin-left: 250px;
+    margin-right: 250px;
+  }
+  h1{
+    font-size: 3.5vw;
+  }
+  .image{
+    grid-row: 1 / 2;
+    margin-top: 110px;
+    padding-bottom: 30px;
+  }
+  .image img{
+    border-radius: 50%;
+  }
 }
 
 
