--- a/css/style2.css
+++ b/css/style2.css
@@ -1,35 +1,57 @@
-body {
-    background-color:lightgreen;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align:center;
-    margin: 0px;
-}
-
 * {
     box-sizing: border-box
 }
 
+.header { grid-area: header; }
+.image1 { grid-area: image1; }
+.image2 { grid-area: image2; }
+.image3 { grid-area: image3; }
+.image4 { grid-area: image4; }
+.image5 { grid-area: image5; }
+.image6 { grid-area: image6; }
+.image7 { grid-area: image7; }
+.image8 { grid-area: image8; }
+.image9 { grid-area: image9; }
+.nav {grid-area: nav; }
+.empty { grid-area: empty; }
+.footer { grid-area: footer; }
+
+.grid-container {
+    display: grid;
+    grid-template-areas:
+    'header header'
+    'nav nav'
+    'image1 image2'
+    'image3 image4'
+    'image5 image6'
+    'image7 image8'
+    'image9 image9'
+    'empty empty'
+    'footer footer';
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    background-color:lightgreen;
+    text-align:center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 0px;
+}
+
+body{
+    background-color: lightgreen;
+    margin: 0px;
+}
+
 .header {
-    background-color: rgb(255, 207, 117);
+    background-color: #FCF8EA;
     padding: 5px;
     margin: 40px 120px 10px 120px;
     border-radius: 200px;
 }
 
-.main {
-    padding: 10px;
-}
-
-
 .footer{
     background-color: rgb(255, 117, 117);
     padding: 10px;
-}
-
-.main {
-    width: 75%;
-    padding: 10px;
-    margin: auto;
+    margin-top: 70px;
 }
 
 h1 {
@@ -52,11 +74,6 @@ a {
     color: darkorange;
 }
 
-
-.main {
-    color: darkolivegreen;
-}
-
 a:hover{
     background-color: aquamarine;
 }
@@ -73,3 +90,86 @@ a:hover {
 a:active {
     color: yellow;
 }
+
+
+@media screen and (max-width: 736px){
+    .grid-container {
+    display: grid;
+    grid-template-areas:
+    'header'
+    'nav'
+    'image1'
+    image2'
+    'image3'
+    image4'
+    'image5'
+    image6'
+    'image7'
+    image8'
+    'image9'
+    'empty'
+    'footer';
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    background-color:lightgreen;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 0px;
+  }
+  .header{
+    border-radius: 200px;
+  }
+
+  h1{
+    font-size: 7vw;
+  }
+
+  .image1{
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+  }
+  .image2{
+    grid-row: 4 / 5;
+    grid-column: 1 / 2;
+  }
+  .image3{
+    grid-row: 5 / 6;
+    grid-column: 1 / 2;
+  }
+  .image4{
+    grid-row: 6 / 7;
+    grid-column: 1 / 2;
+  }
+  .image5{
+    grid-row: 7 / 8;
+    grid-column: 1 / 2;
+  }
+  .image6{
+    grid-row: 8 / 9;
+    grid-column: 1 / 2;
+  }
+  .image7{
+    grid-row: 9 / 10;
+    grid-column: 1 / 2;
+  }
+  .image8{
+    grid-row: 10 / 11;
+    grid-column: 1 / 2;
+  }
+  .image9{
+    grid-row: 11 / 12;
+    grid-column: 1 / 2;
+  }
+  .empty{
+    grid-row: 12 / 13;
+    grid-column: 1 / 2;
+    padding: 2px;
+  }
+  .footer{
+    grid-row: 13 / 14;
+    grid-column: 1 / 2;
+  }
+}
+
+
+
