--- a/css/style2.css
+++ b/css/style2.css
@@ -20,13 +20,13 @@
     grid-template-areas:
     'header header'
     'nav nav'
-    'image1 image2'
+    'image1 image2 '
     'image3 image4'
     'image5 image6'
     'image7 image8'
     'empty empty'
     'footer footer';
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
     background-color:lightgreen;
     text-align:center;
